<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/returnMain2"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/colorlayout1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="8"
                    android:inputType="textPersonName"
                    android:text="@string/text_default"
                    android:autofillHints=""
                    tools:ignore="LabelFor" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/editFontSize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="2"
                    android:inputType="number"
                    android:text="50"
                    android:autofillHints=""
                    tools:ignore="HardcodedText,LabelFor" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/colorBlack2"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/black"
                    app:srcCompat="@drawable/circle"
                    app:tint="@color/black" />

                <ImageButton
                    android:id="@+id/colorBrown2"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/orange"
                    app:srcCompat="@drawable/circle"
                    app:tint="#964B00" />

                <ImageButton
                    android:id="@+id/colorRed2"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/red"
                    app:srcCompat="@drawable/circle"
                    app:tint="#FF0000" />

                <ImageButton
                    android:id="@+id/colorYellow2"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/yellow"
                    app:srcCompat="@drawable/circle"
                    app:tint="#FFFF00" />

                <ImageButton
                    android:id="@+id/colorGreen2"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/green"
                    app:srcCompat="@drawable/circle"
                    app:tint="#00FF00" />

                <ImageButton
                    android:id="@+id/colorBlue2"
                    style="@style/ImageButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/blue"
                    app:srcCompat="@drawable/circle"
                    app:tint="#0000FF" />

            </LinearLayout>
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/returnMain2"
            style="@style/ImageButtonStyle"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/abc_vector_test"
            android:contentDescription="@string/return_main_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>