<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/ToolbarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekEraser"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/fillEraser"
                style="@style/ImageButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/fill"
                android:contentDescription="@string/eraser_style_fill" />

            <ImageButton
                android:id="@+id/strokeEraser"
                style="@style/ImageButtonStyle"
                app:srcCompat="@drawable/stroke"
                android:contentDescription="@string/eraser_style_stroke" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekEraser"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:progress="25"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/returnMain1"
            style="@style/ImageButtonStyle"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/abc_vector_test"
            android:contentDescription="@string/return_main_menu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>